update job
